tests/errors/test_60.xpp
// May only perform field access on a class type

fn main() void {
	let x = (21).y;
	let z = "haha";
	let a = z.foo;
}
